--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Login Page Layout</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,10 +18,11 @@
                 <div class="input-group">
                     <input type="password" placeholder="password">
                 </div>
-                <button class="login-btn">Login</button>
+                <button id="login-btn" class="login-btn">Login</button>
                 <div class="forgot-password">lupa password</div>
             </div>
         </div>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
